cros: UpdateStatusAreaVisibility in WizardControllor::ShowCurrentScreen()

Changes:
(1) Intentionally remove SetStatusAreaVisible method as it doesn't save much code.
(2) For each screen-related status area visibility call, using UpdateStatusAreaVisibilityForScreen method.
(3) Add UpdateStatusAreaVisibilityForScreen in ShowCurrentScreen() to fix the bug.

BUG=708011
TEST=test that reporter's bug is fixed

Review-Url: https://codereview.chromium.org/2791223004
Cr-Commit-Position: refs/heads/master@{#463044}

Former-commit-id: 509a5b53985357e3dce645ad8d92b6769f438a9f